--- a/qemu/Makefile
+++ b/qemu/Makefile
@@ -1,4 +1,4 @@
-all: startup.bin
+all: system.bin
 
 startup_lm3s6965.o: startup_lm3s6965.c
 	arm-none-eabi-gcc -c -g -mcpu=cortex-m3 -mthumb -o startup_lm3s6965.o startup_lm3s6965.c
@@ -6,8 +6,11 @@ startup_lm3s6965.o: startup_lm3s6965.c
 serial_print.o: serial_print.c
 	arm-none-eabi-gcc -c -g -mcpu=cortex-m3 -mthumb -o serial_print.o serial_print.c
 
-startup_lm3s6965.elf: startup_lm3s6965.o serial_print.o
-	arm-none-eabi-ld -T lm3s6965_layout.ld -o startup_lm3s6965.elf startup_lm3s6965.o serial_print.o ../factorial/factorial.o
+main.o: ../factorial/main.c
+	arm-none-eabi-gcc -c -g -mcpu=cortex-m3 -mthumb -o main.o ../factorial/main.c
+
+startup_lm3s6965.elf: startup_lm3s6965.o serial_print.o main.o
+	arm-none-eabi-ld -T lm3s6965_layout.ld -o startup_lm3s6965.elf startup_lm3s6965.o serial_print.o ../factorial/factorial.o main.o
 
 system.bin: startup_lm3s6965.elf
 	arm-none-eabi-objcopy -O binary startup_lm3s6965.elf system.bin
@@ -19,7 +22,7 @@ rundbg: system.bin
 	qemu-system-arm -S -M lm3s6965evb -kernel system.bin -gdb tcp::5678 -nographic -monitor telnet:127.0.0.1:1234,server,nowait
 
 clean:
-	rm -f startup_lm3s6965.o serial_print.o startup.elf startup.bin
+	rm -f startup_lm3s6965.o serial_print.o startup.elf startup.bin main.o
 
 dump:
 	arm-none-eabi-nm -n startup_lm3s6965.o
