--- a/qemu/Makefile
+++ b/qemu/Makefile
@@ -9,7 +9,7 @@ serial_print.o: serial_print.c
 	arm-none-eabi-gcc -c -g -mcpu=cortex-m3 -mthumb -o serial_print.o serial_print.c
 
 main.o: $(DIR)/main.c
-	arm-none-eabi-gcc -c -g -mcpu=cortex-m3 -mthumb -o main.o $(DIR)/main.c
+	arm-none-eabi-gcc -c -g -mcpu=cortex-m3 -mthumb -o main.o $(DIR)/main.c -I.
 
 startup_lm3s6965.elf: startup_lm3s6965.o serial_print.o main.o
 	arm-none-eabi-ld -T lm3s6965_layout.ld -o startup_lm3s6965.elf startup_lm3s6965.o serial_print.o $(DIR)/func.o main.o
