factorial runs on mac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
 set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
 
-add_executable(serial_print qemu/serial_print.c local/main.c)
+add_executable(app)# qemu/serial_print.c)
+target_sources(app PRIVATE factorial/main.c factorial/mac.o)
+
 include_directories(qemu)
 
 
